parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    COMA
    CORA
    CORC
    DOSPUNTOS
    NULO
    RNULL

Grammar

Rule 0     S' -> init
Rule 1     init -> instrucciones
Rule 2     instrucciones -> instrucciones instruccion
Rule 3     instrucciones -> instruccion
Rule 4     terminacion -> PUNTOCOMA
Rule 5     terminacion -> <empty>
Rule 6     instruccion -> imprimir_instr terminacion
Rule 7     instruccion -> declaracion_instr terminacion
Rule 8     instruccion -> asignacion_instr terminacion
Rule 9     instruccion -> if_instr
Rule 10    instruccion -> while_instr
Rule 11    instruccion -> for_instr
Rule 12    instruccion -> break_instr terminacion
Rule 13    instruccion -> continue_instr terminacion
Rule 14    instruccion -> main_instr
Rule 15    instruccion -> funcion_instr
Rule 16    instruccion -> llamada_instr terminacion
Rule 17    instruccion -> incremento_instr terminacion
Rule 18    instruccion -> decremento_instr terminacion
Rule 19    instruccion -> error terminacion
Rule 20    imprimir_instr -> RPRINT PARA expresion PARC
Rule 21    declaracion_instr -> RVAR ID IGUAL expresion
Rule 22    asignacion_instr -> ID IGUAL expresion
Rule 23    incremento_instr -> ID MASMAS
Rule 24    decremento_instr -> ID MENOSMENOS
Rule 25    if_instr -> RIF PARA expresion PARC LLAVEA instrucciones LLAVEC
Rule 26    if_instr -> RIF PARA expresion PARC LLAVEA instrucciones LLAVEC RELSE LLAVEA instrucciones LLAVEC
Rule 27    if_instr -> RIF PARA expresion PARC LLAVEA instrucciones LLAVEC RELSE if_instr
Rule 28    while_instr -> RWHILE PARA expresion PARC LLAVEA instrucciones LLAVEC
Rule 29    for_instr -> RFOR PARA declaracion_asignacion PUNTOCOMA expresion PUNTOCOMA actualizacion PARC LLAVEA instrucciones LLAVEC
Rule 30    declaracion_asignacion -> declaracion_instr
Rule 31    declaracion_asignacion -> asignacion_instr
Rule 32    actualizacion -> incremento_instr
Rule 33    actualizacion -> decremento_instr
Rule 34    actualizacion -> asignacion_instr
Rule 35    break_instr -> RBREAK
Rule 36    continue_instr -> RCONTINUE
Rule 37    main_instr -> RMAIN PARA PARC LLAVEA instrucciones LLAVEC
Rule 38    funcion_instr -> RFUNC ID PARA PARC LLAVEA instrucciones LLAVEC
Rule 39    llamada_instr -> ID PARA PARC
Rule 40    tipo -> RINT
Rule 41    tipo -> RFLOAT
Rule 42    tipo -> RSTRING
Rule 43    tipo -> RBOOLEAN
Rule 44    expresion -> expresion MAS expresion
Rule 45    expresion -> expresion MENOS expresion
Rule 46    expresion -> expresion POR expresion
Rule 47    expresion -> expresion DIV expresion
Rule 48    expresion -> expresion MOD expresion
Rule 49    expresion -> expresion POT expresion
Rule 50    expresion -> expresion MENORQUE expresion
Rule 51    expresion -> expresion MAYORQUE expresion
Rule 52    expresion -> expresion MENORIGUAL expresion
Rule 53    expresion -> expresion MAYORIGUAL expresion
Rule 54    expresion -> expresion IGUALIGUAL expresion
Rule 55    expresion -> expresion DIFERENTE expresion
Rule 56    expresion -> expresion AND expresion
Rule 57    expresion -> expresion OR expresion
Rule 58    expresion -> MENOS expresion
Rule 59    expresion -> NOT expresion
Rule 60    expresion -> expresion MENOSMENOS
Rule 61    expresion -> expresion MASMAS
Rule 62    expresion -> PARA expresion PARC
Rule 63    expresion -> ID
Rule 64    expresion -> ENTERO
Rule 65    expresion -> DECIMAL
Rule 66    expresion -> CADENA
Rule 67    expresion -> RTRUE
Rule 68    expresion -> RFALSE

Terminals, with rules where they appear

AND                  : 56
CADENA               : 66
COMA                 : 
CORA                 : 
CORC                 : 
DECIMAL              : 65
DIFERENTE            : 55
DIV                  : 47
DOSPUNTOS            : 
ENTERO               : 64
ID                   : 21 22 23 24 38 39 63
IGUAL                : 21 22
IGUALIGUAL           : 54
LLAVEA               : 25 26 26 27 28 29 37 38
LLAVEC               : 25 26 26 27 28 29 37 38
MAS                  : 44
MASMAS               : 23 61
MAYORIGUAL           : 53
MAYORQUE             : 51
MENORIGUAL           : 52
MENORQUE             : 50
MENOS                : 45 58
MENOSMENOS           : 24 60
MOD                  : 48
NOT                  : 59
NULO                 : 
OR                   : 57
PARA                 : 20 25 26 27 28 29 37 38 39 62
PARC                 : 20 25 26 27 28 29 37 38 39 62
POR                  : 46
POT                  : 49
PUNTOCOMA            : 4 29 29
RBOOLEAN             : 43
RBREAK               : 35
RCONTINUE            : 36
RELSE                : 26 27
RFALSE               : 68
RFLOAT               : 41
RFOR                 : 29
RFUNC                : 38
RIF                  : 25 26 27
RINT                 : 40
RMAIN                : 37
RNULL                : 
RPRINT               : 20
RSTRING              : 42
RTRUE                : 67
RVAR                 : 21
RWHILE               : 28
error                : 19

Nonterminals, with rules where they appear

actualizacion        : 29
asignacion_instr     : 8 31 34
break_instr          : 12
continue_instr       : 13
declaracion_asignacion : 29
declaracion_instr    : 7 30
decremento_instr     : 18 33
expresion            : 20 21 22 25 26 27 28 29 44 44 45 45 46 46 47 47 48 48 49 49 50 50 51 51 52 52 53 53 54 54 55 55 56 56 57 57 58 59 60 61 62
for_instr            : 11
funcion_instr        : 15
if_instr             : 9 27
imprimir_instr       : 6
incremento_instr     : 17 32
init                 : 0
instruccion          : 2 3
instrucciones        : 1 2 25 26 26 27 28 29 37 38
llamada_instr        : 16
main_instr           : 14
terminacion          : 6 7 8 12 13 16 17 18 19
tipo                 : 
while_instr          : 10

Parsing method: LALR

state 0

    (0) S' -> . init
    (1) init -> . instrucciones
    (2) instrucciones -> . instrucciones instruccion
    (3) instrucciones -> . instruccion
    (6) instruccion -> . imprimir_instr terminacion
    (7) instruccion -> . declaracion_instr terminacion
    (8) instruccion -> . asignacion_instr terminacion
    (9) instruccion -> . if_instr
    (10) instruccion -> . while_instr
    (11) instruccion -> . for_instr
    (12) instruccion -> . break_instr terminacion
    (13) instruccion -> . continue_instr terminacion
    (14) instruccion -> . main_instr
    (15) instruccion -> . funcion_instr
    (16) instruccion -> . llamada_instr terminacion
    (17) instruccion -> . incremento_instr terminacion
    (18) instruccion -> . decremento_instr terminacion
    (19) instruccion -> . error terminacion
    (20) imprimir_instr -> . RPRINT PARA expresion PARC
    (21) declaracion_instr -> . RVAR ID IGUAL expresion
    (22) asignacion_instr -> . ID IGUAL expresion
    (25) if_instr -> . RIF PARA expresion PARC LLAVEA instrucciones LLAVEC
    (26) if_instr -> . RIF PARA expresion PARC LLAVEA instrucciones LLAVEC RELSE LLAVEA instrucciones LLAVEC
    (27) if_instr -> . RIF PARA expresion PARC LLAVEA instrucciones LLAVEC RELSE if_instr
    (28) while_instr -> . RWHILE PARA expresion PARC LLAVEA instrucciones LLAVEC
    (29) for_instr -> . RFOR PARA declaracion_asignacion PUNTOCOMA expresion PUNTOCOMA actualizacion PARC LLAVEA instrucciones LLAVEC
    (35) break_instr -> . RBREAK
    (36) continue_instr -> . RCONTINUE
    (37) main_instr -> . RMAIN PARA PARC LLAVEA instrucciones LLAVEC
    (38) funcion_instr -> . RFUNC ID PARA PARC LLAVEA instrucciones LLAVEC
    (39) llamada_instr -> . ID PARA PARC
    (23) incremento_instr -> . ID MASMAS
    (24) decremento_instr -> . ID MENOSMENOS

    error           shift and go to state 17
    RPRINT          shift and go to state 18
    RVAR            shift and go to state 19
    ID              shift and go to state 20
    RIF             shift and go to state 21
    RWHILE          shift and go to state 22
    RFOR            shift and go to state 23
    RBREAK          shift and go to state 24
    RCONTINUE       shift and go to state 25
    RMAIN           shift and go to state 26
    RFUNC           shift and go to state 27

    init                           shift and go to state 1
    instrucciones                  shift and go to state 2
    instruccion                    shift and go to state 3
    imprimir_instr                 shift and go to state 4
    declaracion_instr              shift and go to state 5
    asignacion_instr               shift and go to state 6
    if_instr                       shift and go to state 7
    while_instr                    shift and go to state 8
    for_instr                      shift and go to state 9
    break_instr                    shift and go to state 10
    continue_instr                 shift and go to state 11
    main_instr                     shift and go to state 12
    funcion_instr                  shift and go to state 13
    llamada_instr                  shift and go to state 14
    incremento_instr               shift and go to state 15
    decremento_instr               shift and go to state 16

state 1

    (0) S' -> init .



state 2

    (1) init -> instrucciones .
    (2) instrucciones -> instrucciones . instruccion
    (6) instruccion -> . imprimir_instr terminacion
    (7) instruccion -> . declaracion_instr terminacion
    (8) instruccion -> . asignacion_instr terminacion
    (9) instruccion -> . if_instr
    (10) instruccion -> . while_instr
    (11) instruccion -> . for_instr
    (12) instruccion -> . break_instr terminacion
    (13) instruccion -> . continue_instr terminacion
    (14) instruccion -> . main_instr
    (15) instruccion -> . funcion_instr
    (16) instruccion -> . llamada_instr terminacion
    (17) instruccion -> . incremento_instr terminacion
    (18) instruccion -> . decremento_instr terminacion
    (19) instruccion -> . error terminacion
    (20) imprimir_instr -> . RPRINT PARA expresion PARC
    (21) declaracion_instr -> . RVAR ID IGUAL expresion
    (22) asignacion_instr -> . ID IGUAL expresion
    (25) if_instr -> . RIF PARA expresion PARC LLAVEA instrucciones LLAVEC
    (26) if_instr -> . RIF PARA expresion PARC LLAVEA instrucciones LLAVEC RELSE LLAVEA instrucciones LLAVEC
    (27) if_instr -> . RIF PARA expresion PARC LLAVEA instrucciones LLAVEC RELSE if_instr
    (28) while_instr -> . RWHILE PARA expresion PARC LLAVEA instrucciones LLAVEC
    (29) for_instr -> . RFOR PARA declaracion_asignacion PUNTOCOMA expresion PUNTOCOMA actualizacion PARC LLAVEA instrucciones LLAVEC
    (35) break_instr -> . RBREAK
    (36) continue_instr -> . RCONTINUE
    (37) main_instr -> . RMAIN PARA PARC LLAVEA instrucciones LLAVEC
    (38) funcion_instr -> . RFUNC ID PARA PARC LLAVEA instrucciones LLAVEC
    (39) llamada_instr -> . ID PARA PARC
    (23) incremento_instr -> . ID MASMAS
    (24) decremento_instr -> . ID MENOSMENOS

    $end            reduce using rule 1 (init -> instrucciones .)
    error           shift and go to state 17
    RPRINT          shift and go to state 18
    RVAR            shift and go to state 19
    ID              shift and go to state 20
    RIF             shift and go to state 21
    RWHILE          shift and go to state 22
    RFOR            shift and go to state 23
    RBREAK          shift and go to state 24
    RCONTINUE       shift and go to state 25
    RMAIN           shift and go to state 26
    RFUNC           shift and go to state 27

    instruccion                    shift and go to state 28
    imprimir_instr                 shift and go to state 4
    declaracion_instr              shift and go to state 5
    asignacion_instr               shift and go to state 6
    if_instr                       shift and go to state 7
    while_instr                    shift and go to state 8
    for_instr                      shift and go to state 9
    break_instr                    shift and go to state 10
    continue_instr                 shift and go to state 11
    main_instr                     shift and go to state 12
    funcion_instr                  shift and go to state 13
    llamada_instr                  shift and go to state 14
    incremento_instr               shift and go to state 15
    decremento_instr               shift and go to state 16

state 3

    (3) instrucciones -> instruccion .

    error           reduce using rule 3 (instrucciones -> instruccion .)
    RPRINT          reduce using rule 3 (instrucciones -> instruccion .)
    RVAR            reduce using rule 3 (instrucciones -> instruccion .)
    ID              reduce using rule 3 (instrucciones -> instruccion .)
    RIF             reduce using rule 3 (instrucciones -> instruccion .)
    RWHILE          reduce using rule 3 (instrucciones -> instruccion .)
    RFOR            reduce using rule 3 (instrucciones -> instruccion .)
    RBREAK          reduce using rule 3 (instrucciones -> instruccion .)
    RCONTINUE       reduce using rule 3 (instrucciones -> instruccion .)
    RMAIN           reduce using rule 3 (instrucciones -> instruccion .)
    RFUNC           reduce using rule 3 (instrucciones -> instruccion .)
    $end            reduce using rule 3 (instrucciones -> instruccion .)
    LLAVEC          reduce using rule 3 (instrucciones -> instruccion .)


state 4

    (6) instruccion -> imprimir_instr . terminacion
    (4) terminacion -> . PUNTOCOMA
    (5) terminacion -> .

    PUNTOCOMA       shift and go to state 30
    error           reduce using rule 5 (terminacion -> .)
    RPRINT          reduce using rule 5 (terminacion -> .)
    RVAR            reduce using rule 5 (terminacion -> .)
    ID              reduce using rule 5 (terminacion -> .)
    RIF             reduce using rule 5 (terminacion -> .)
    RWHILE          reduce using rule 5 (terminacion -> .)
    RFOR            reduce using rule 5 (terminacion -> .)
    RBREAK          reduce using rule 5 (terminacion -> .)
    RCONTINUE       reduce using rule 5 (terminacion -> .)
    RMAIN           reduce using rule 5 (terminacion -> .)
    RFUNC           reduce using rule 5 (terminacion -> .)
    $end            reduce using rule 5 (terminacion -> .)
    LLAVEC          reduce using rule 5 (terminacion -> .)

    terminacion                    shift and go to state 29

state 5

    (7) instruccion -> declaracion_instr . terminacion
    (4) terminacion -> . PUNTOCOMA
    (5) terminacion -> .

    PUNTOCOMA       shift and go to state 30
    error           reduce using rule 5 (terminacion -> .)
    RPRINT          reduce using rule 5 (terminacion -> .)
    RVAR            reduce using rule 5 (terminacion -> .)
    ID              reduce using rule 5 (terminacion -> .)
    RIF             reduce using rule 5 (terminacion -> .)
    RWHILE          reduce using rule 5 (terminacion -> .)
    RFOR            reduce using rule 5 (terminacion -> .)
    RBREAK          reduce using rule 5 (terminacion -> .)
    RCONTINUE       reduce using rule 5 (terminacion -> .)
    RMAIN           reduce using rule 5 (terminacion -> .)
    RFUNC           reduce using rule 5 (terminacion -> .)
    $end            reduce using rule 5 (terminacion -> .)
    LLAVEC          reduce using rule 5 (terminacion -> .)

    terminacion                    shift and go to state 31

state 6

    (8) instruccion -> asignacion_instr . terminacion
    (4) terminacion -> . PUNTOCOMA
    (5) terminacion -> .

    PUNTOCOMA       shift and go to state 30
    error           reduce using rule 5 (terminacion -> .)
    RPRINT          reduce using rule 5 (terminacion -> .)
    RVAR            reduce using rule 5 (terminacion -> .)
    ID              reduce using rule 5 (terminacion -> .)
    RIF             reduce using rule 5 (terminacion -> .)
    RWHILE          reduce using rule 5 (terminacion -> .)
    RFOR            reduce using rule 5 (terminacion -> .)
    RBREAK          reduce using rule 5 (terminacion -> .)
    RCONTINUE       reduce using rule 5 (terminacion -> .)
    RMAIN           reduce using rule 5 (terminacion -> .)
    RFUNC           reduce using rule 5 (terminacion -> .)
    $end            reduce using rule 5 (terminacion -> .)
    LLAVEC          reduce using rule 5 (terminacion -> .)

    terminacion                    shift and go to state 32

state 7

    (9) instruccion -> if_instr .

    error           reduce using rule 9 (instruccion -> if_instr .)
    RPRINT          reduce using rule 9 (instruccion -> if_instr .)
    RVAR            reduce using rule 9 (instruccion -> if_instr .)
    ID              reduce using rule 9 (instruccion -> if_instr .)
    RIF             reduce using rule 9 (instruccion -> if_instr .)
    RWHILE          reduce using rule 9 (instruccion -> if_instr .)
    RFOR            reduce using rule 9 (instruccion -> if_instr .)
    RBREAK          reduce using rule 9 (instruccion -> if_instr .)
    RCONTINUE       reduce using rule 9 (instruccion -> if_instr .)
    RMAIN           reduce using rule 9 (instruccion -> if_instr .)
    RFUNC           reduce using rule 9 (instruccion -> if_instr .)
    $end            reduce using rule 9 (instruccion -> if_instr .)
    LLAVEC          reduce using rule 9 (instruccion -> if_instr .)


state 8

    (10) instruccion -> while_instr .

    error           reduce using rule 10 (instruccion -> while_instr .)
    RPRINT          reduce using rule 10 (instruccion -> while_instr .)
    RVAR            reduce using rule 10 (instruccion -> while_instr .)
    ID              reduce using rule 10 (instruccion -> while_instr .)
    RIF             reduce using rule 10 (instruccion -> while_instr .)
    RWHILE          reduce using rule 10 (instruccion -> while_instr .)
    RFOR            reduce using rule 10 (instruccion -> while_instr .)
    RBREAK          reduce using rule 10 (instruccion -> while_instr .)
    RCONTINUE       reduce using rule 10 (instruccion -> while_instr .)
    RMAIN           reduce using rule 10 (instruccion -> while_instr .)
    RFUNC           reduce using rule 10 (instruccion -> while_instr .)
    $end            reduce using rule 10 (instruccion -> while_instr .)
    LLAVEC          reduce using rule 10 (instruccion -> while_instr .)


state 9

    (11) instruccion -> for_instr .

    error           reduce using rule 11 (instruccion -> for_instr .)
    RPRINT          reduce using rule 11 (instruccion -> for_instr .)
    RVAR            reduce using rule 11 (instruccion -> for_instr .)
    ID              reduce using rule 11 (instruccion -> for_instr .)
    RIF             reduce using rule 11 (instruccion -> for_instr .)
    RWHILE          reduce using rule 11 (instruccion -> for_instr .)
    RFOR            reduce using rule 11 (instruccion -> for_instr .)
    RBREAK          reduce using rule 11 (instruccion -> for_instr .)
    RCONTINUE       reduce using rule 11 (instruccion -> for_instr .)
    RMAIN           reduce using rule 11 (instruccion -> for_instr .)
    RFUNC           reduce using rule 11 (instruccion -> for_instr .)
    $end            reduce using rule 11 (instruccion -> for_instr .)
    LLAVEC          reduce using rule 11 (instruccion -> for_instr .)


state 10

    (12) instruccion -> break_instr . terminacion
    (4) terminacion -> . PUNTOCOMA
    (5) terminacion -> .

    PUNTOCOMA       shift and go to state 30
    error           reduce using rule 5 (terminacion -> .)
    RPRINT          reduce using rule 5 (terminacion -> .)
    RVAR            reduce using rule 5 (terminacion -> .)
    ID              reduce using rule 5 (terminacion -> .)
    RIF             reduce using rule 5 (terminacion -> .)
    RWHILE          reduce using rule 5 (terminacion -> .)
    RFOR            reduce using rule 5 (terminacion -> .)
    RBREAK          reduce using rule 5 (terminacion -> .)
    RCONTINUE       reduce using rule 5 (terminacion -> .)
    RMAIN           reduce using rule 5 (terminacion -> .)
    RFUNC           reduce using rule 5 (terminacion -> .)
    $end            reduce using rule 5 (terminacion -> .)
    LLAVEC          reduce using rule 5 (terminacion -> .)

    terminacion                    shift and go to state 33

state 11

    (13) instruccion -> continue_instr . terminacion
    (4) terminacion -> . PUNTOCOMA
    (5) terminacion -> .

    PUNTOCOMA       shift and go to state 30
    error           reduce using rule 5 (terminacion -> .)
    RPRINT          reduce using rule 5 (terminacion -> .)
    RVAR            reduce using rule 5 (terminacion -> .)
    ID              reduce using rule 5 (terminacion -> .)
    RIF             reduce using rule 5 (terminacion -> .)
    RWHILE          reduce using rule 5 (terminacion -> .)
    RFOR            reduce using rule 5 (terminacion -> .)
    RBREAK          reduce using rule 5 (terminacion -> .)
    RCONTINUE       reduce using rule 5 (terminacion -> .)
    RMAIN           reduce using rule 5 (terminacion -> .)
    RFUNC           reduce using rule 5 (terminacion -> .)
    $end            reduce using rule 5 (terminacion -> .)
    LLAVEC          reduce using rule 5 (terminacion -> .)

    terminacion                    shift and go to state 34

state 12

    (14) instruccion -> main_instr .

    error           reduce using rule 14 (instruccion -> main_instr .)
    RPRINT          reduce using rule 14 (instruccion -> main_instr .)
    RVAR            reduce using rule 14 (instruccion -> main_instr .)
    ID              reduce using rule 14 (instruccion -> main_instr .)
    RIF             reduce using rule 14 (instruccion -> main_instr .)
    RWHILE          reduce using rule 14 (instruccion -> main_instr .)
    RFOR            reduce using rule 14 (instruccion -> main_instr .)
    RBREAK          reduce using rule 14 (instruccion -> main_instr .)
    RCONTINUE       reduce using rule 14 (instruccion -> main_instr .)
    RMAIN           reduce using rule 14 (instruccion -> main_instr .)
    RFUNC           reduce using rule 14 (instruccion -> main_instr .)
    $end            reduce using rule 14 (instruccion -> main_instr .)
    LLAVEC          reduce using rule 14 (instruccion -> main_instr .)


state 13

    (15) instruccion -> funcion_instr .

    error           reduce using rule 15 (instruccion -> funcion_instr .)
    RPRINT          reduce using rule 15 (instruccion -> funcion_instr .)
    RVAR            reduce using rule 15 (instruccion -> funcion_instr .)
    ID              reduce using rule 15 (instruccion -> funcion_instr .)
    RIF             reduce using rule 15 (instruccion -> funcion_instr .)
    RWHILE          reduce using rule 15 (instruccion -> funcion_instr .)
    RFOR            reduce using rule 15 (instruccion -> funcion_instr .)
    RBREAK          reduce using rule 15 (instruccion -> funcion_instr .)
    RCONTINUE       reduce using rule 15 (instruccion -> funcion_instr .)
    RMAIN           reduce using rule 15 (instruccion -> funcion_instr .)
    RFUNC           reduce using rule 15 (instruccion -> funcion_instr .)
    $end            reduce using rule 15 (instruccion -> funcion_instr .)
    LLAVEC          reduce using rule 15 (instruccion -> funcion_instr .)


state 14

    (16) instruccion -> llamada_instr . terminacion
    (4) terminacion -> . PUNTOCOMA
    (5) terminacion -> .

    PUNTOCOMA       shift and go to state 30
    error           reduce using rule 5 (terminacion -> .)
    RPRINT          reduce using rule 5 (terminacion -> .)
    RVAR            reduce using rule 5 (terminacion -> .)
    ID              reduce using rule 5 (terminacion -> .)
    RIF             reduce using rule 5 (terminacion -> .)
    RWHILE          reduce using rule 5 (terminacion -> .)
    RFOR            reduce using rule 5 (terminacion -> .)
    RBREAK          reduce using rule 5 (terminacion -> .)
    RCONTINUE       reduce using rule 5 (terminacion -> .)
    RMAIN           reduce using rule 5 (terminacion -> .)
    RFUNC           reduce using rule 5 (terminacion -> .)
    $end            reduce using rule 5 (terminacion -> .)
    LLAVEC          reduce using rule 5 (terminacion -> .)

    terminacion                    shift and go to state 35

state 15

    (17) instruccion -> incremento_instr . terminacion
    (4) terminacion -> . PUNTOCOMA
    (5) terminacion -> .

    PUNTOCOMA       shift and go to state 30
    error           reduce using rule 5 (terminacion -> .)
    RPRINT          reduce using rule 5 (terminacion -> .)
    RVAR            reduce using rule 5 (terminacion -> .)
    ID              reduce using rule 5 (terminacion -> .)
    RIF             reduce using rule 5 (terminacion -> .)
    RWHILE          reduce using rule 5 (terminacion -> .)
    RFOR            reduce using rule 5 (terminacion -> .)
    RBREAK          reduce using rule 5 (terminacion -> .)
    RCONTINUE       reduce using rule 5 (terminacion -> .)
    RMAIN           reduce using rule 5 (terminacion -> .)
    RFUNC           reduce using rule 5 (terminacion -> .)
    $end            reduce using rule 5 (terminacion -> .)
    LLAVEC          reduce using rule 5 (terminacion -> .)

    terminacion                    shift and go to state 36

state 16

    (18) instruccion -> decremento_instr . terminacion
    (4) terminacion -> . PUNTOCOMA
    (5) terminacion -> .

    PUNTOCOMA       shift and go to state 30
    error           reduce using rule 5 (terminacion -> .)
    RPRINT          reduce using rule 5 (terminacion -> .)
    RVAR            reduce using rule 5 (terminacion -> .)
    ID              reduce using rule 5 (terminacion -> .)
    RIF             reduce using rule 5 (terminacion -> .)
    RWHILE          reduce using rule 5 (terminacion -> .)
    RFOR            reduce using rule 5 (terminacion -> .)
    RBREAK          reduce using rule 5 (terminacion -> .)
    RCONTINUE       reduce using rule 5 (terminacion -> .)
    RMAIN           reduce using rule 5 (terminacion -> .)
    RFUNC           reduce using rule 5 (terminacion -> .)
    $end            reduce using rule 5 (terminacion -> .)
    LLAVEC          reduce using rule 5 (terminacion -> .)

    terminacion                    shift and go to state 37

state 17

    (19) instruccion -> error . terminacion
    (4) terminacion -> . PUNTOCOMA
    (5) terminacion -> .

    PUNTOCOMA       shift and go to state 30
    error           reduce using rule 5 (terminacion -> .)
    RPRINT          reduce using rule 5 (terminacion -> .)
    RVAR            reduce using rule 5 (terminacion -> .)
    ID              reduce using rule 5 (terminacion -> .)
    RIF             reduce using rule 5 (terminacion -> .)
    RWHILE          reduce using rule 5 (terminacion -> .)
    RFOR            reduce using rule 5 (terminacion -> .)
    RBREAK          reduce using rule 5 (terminacion -> .)
    RCONTINUE       reduce using rule 5 (terminacion -> .)
    RMAIN           reduce using rule 5 (terminacion -> .)
    RFUNC           reduce using rule 5 (terminacion -> .)
    $end            reduce using rule 5 (terminacion -> .)
    LLAVEC          reduce using rule 5 (terminacion -> .)

    terminacion                    shift and go to state 38

state 18

    (20) imprimir_instr -> RPRINT . PARA expresion PARC

    PARA            shift and go to state 39


state 19

    (21) declaracion_instr -> RVAR . ID IGUAL expresion

    ID              shift and go to state 40


state 20

    (22) asignacion_instr -> ID . IGUAL expresion
    (39) llamada_instr -> ID . PARA PARC
    (23) incremento_instr -> ID . MASMAS
    (24) decremento_instr -> ID . MENOSMENOS

    IGUAL           shift and go to state 41
    PARA            shift and go to state 42
    MASMAS          shift and go to state 43
    MENOSMENOS      shift and go to state 44


state 21

    (25) if_instr -> RIF . PARA expresion PARC LLAVEA instrucciones LLAVEC
    (26) if_instr -> RIF . PARA expresion PARC LLAVEA instrucciones LLAVEC RELSE LLAVEA instrucciones LLAVEC
    (27) if_instr -> RIF . PARA expresion PARC LLAVEA instrucciones LLAVEC RELSE if_instr

    PARA            shift and go to state 45


state 22

    (28) while_instr -> RWHILE . PARA expresion PARC LLAVEA instrucciones LLAVEC

    PARA            shift and go to state 46


state 23

    (29) for_instr -> RFOR . PARA declaracion_asignacion PUNTOCOMA expresion PUNTOCOMA actualizacion PARC LLAVEA instrucciones LLAVEC

    PARA            shift and go to state 47


state 24

    (35) break_instr -> RBREAK .

    PUNTOCOMA       reduce using rule 35 (break_instr -> RBREAK .)
    error           reduce using rule 35 (break_instr -> RBREAK .)
    RPRINT          reduce using rule 35 (break_instr -> RBREAK .)
    RVAR            reduce using rule 35 (break_instr -> RBREAK .)
    ID              reduce using rule 35 (break_instr -> RBREAK .)
    RIF             reduce using rule 35 (break_instr -> RBREAK .)
    RWHILE          reduce using rule 35 (break_instr -> RBREAK .)
    RFOR            reduce using rule 35 (break_instr -> RBREAK .)
    RBREAK          reduce using rule 35 (break_instr -> RBREAK .)
    RCONTINUE       reduce using rule 35 (break_instr -> RBREAK .)
    RMAIN           reduce using rule 35 (break_instr -> RBREAK .)
    RFUNC           reduce using rule 35 (break_instr -> RBREAK .)
    $end            reduce using rule 35 (break_instr -> RBREAK .)
    LLAVEC          reduce using rule 35 (break_instr -> RBREAK .)


state 25

    (36) continue_instr -> RCONTINUE .

    PUNTOCOMA       reduce using rule 36 (continue_instr -> RCONTINUE .)
    error           reduce using rule 36 (continue_instr -> RCONTINUE .)
    RPRINT          reduce using rule 36 (continue_instr -> RCONTINUE .)
    RVAR            reduce using rule 36 (continue_instr -> RCONTINUE .)
    ID              reduce using rule 36 (continue_instr -> RCONTINUE .)
    RIF             reduce using rule 36 (continue_instr -> RCONTINUE .)
    RWHILE          reduce using rule 36 (continue_instr -> RCONTINUE .)
    RFOR            reduce using rule 36 (continue_instr -> RCONTINUE .)
    RBREAK          reduce using rule 36 (continue_instr -> RCONTINUE .)
    RCONTINUE       reduce using rule 36 (continue_instr -> RCONTINUE .)
    RMAIN           reduce using rule 36 (continue_instr -> RCONTINUE .)
    RFUNC           reduce using rule 36 (continue_instr -> RCONTINUE .)
    $end            reduce using rule 36 (continue_instr -> RCONTINUE .)
    LLAVEC          reduce using rule 36 (continue_instr -> RCONTINUE .)


state 26

    (37) main_instr -> RMAIN . PARA PARC LLAVEA instrucciones LLAVEC

    PARA            shift and go to state 48


state 27

    (38) funcion_instr -> RFUNC . ID PARA PARC LLAVEA instrucciones LLAVEC

    ID              shift and go to state 49


state 28

    (2) instrucciones -> instrucciones instruccion .

    error           reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    RPRINT          reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    RVAR            reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    ID              reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    RIF             reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    RWHILE          reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    RFOR            reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    RBREAK          reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    RCONTINUE       reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    RMAIN           reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    RFUNC           reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    $end            reduce using rule 2 (instrucciones -> instrucciones instruccion .)
    LLAVEC          reduce using rule 2 (instrucciones -> instrucciones instruccion .)


state 29

    (6) instruccion -> imprimir_instr terminacion .

    error           reduce using rule 6 (instruccion -> imprimir_instr terminacion .)
    RPRINT          reduce using rule 6 (instruccion -> imprimir_instr terminacion .)
    RVAR            reduce using rule 6 (instruccion -> imprimir_instr terminacion .)
    ID              reduce using rule 6 (instruccion -> imprimir_instr terminacion .)
    RIF             reduce using rule 6 (instruccion -> imprimir_instr terminacion .)
    RWHILE          reduce using rule 6 (instruccion -> imprimir_instr terminacion .)
    RFOR            reduce using rule 6 (instruccion -> imprimir_instr terminacion .)
    RBREAK          reduce using rule 6 (instruccion -> imprimir_instr terminacion .)
    RCONTINUE       reduce using rule 6 (instruccion -> imprimir_instr terminacion .)
    RMAIN           reduce using rule 6 (instruccion -> imprimir_instr terminacion .)
    RFUNC           reduce using rule 6 (instruccion -> imprimir_instr terminacion .)
    $end            reduce using rule 6 (instruccion -> imprimir_instr terminacion .)
    LLAVEC          reduce using rule 6 (instruccion -> imprimir_instr terminacion .)


state 30

    (4) terminacion -> PUNTOCOMA .

    error           reduce using rule 4 (terminacion -> PUNTOCOMA .)
    RPRINT          reduce using rule 4 (terminacion -> PUNTOCOMA .)
    RVAR            reduce using rule 4 (terminacion -> PUNTOCOMA .)
    ID              reduce using rule 4 (terminacion -> PUNTOCOMA .)
    RIF             reduce using rule 4 (terminacion -> PUNTOCOMA .)
    RWHILE          reduce using rule 4 (terminacion -> PUNTOCOMA .)
    RFOR            reduce using rule 4 (terminacion -> PUNTOCOMA .)
    RBREAK          reduce using rule 4 (terminacion -> PUNTOCOMA .)
    RCONTINUE       reduce using rule 4 (terminacion -> PUNTOCOMA .)
    RMAIN           reduce using rule 4 (terminacion -> PUNTOCOMA .)
    RFUNC           reduce using rule 4 (terminacion -> PUNTOCOMA .)
    $end            reduce using rule 4 (terminacion -> PUNTOCOMA .)
    LLAVEC          reduce using rule 4 (terminacion -> PUNTOCOMA .)


state 31

    (7) instruccion -> declaracion_instr terminacion .
